--- a/stp7/index.html
+++ b/stp7/index.html
@@ -1,42 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocumentW6</title>
+    <link rel="stylesheet" href="style/stp7.css" />
+    <title>objective1 - stp7</title>
   </head>
   <body>
-    <h1>7주차 문서입니다</h1>
-    <h2>영상의 html들</h2>
-    <ul>
-      <li>
-        <a href="wrapUp/objective1/objective1.html">objective1</a>
-        <ul>
-          <li>
-            <a href="wrapUp/stp1/stp1.html">stp1</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp2/stp2.html">stp2</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp3/stp3.html">stp3</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp4/stp4.html">stp4</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp5/stp5.html">stp5</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp6/stp6.html">stp6</a>
-          </li>
-          <li>
-            <a href="wrapUp/stp7/stp7.html">stp7</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <a href="../index.html">인덱스로 돌아가기</a>
+    <div class="section nav">
+      <div class="container">
+        <div class="wrapper">
+          <div class="nav__logo">logo</div>
+          <div class="nav__menuWrapper">
+            <div class="nav__menu">one</div>
+            <div class="nav__menu">two</div>
+            <div class="nav__menu">three</div>
+            <div class="nav__menu">four</div>
+          </div>
+          <div class="nav__menuWrapper">
+            <div class="nav__menu">sign up</div>
+            <div class="nav__menu button">sign in</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="hero1" class="section main">
+      <div class="container">
+        <div class="wrapper">
+          <div class="main__text">
+            <div>
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Commodi magnam sunt totam labore nulla architecto ducimus vel
+                dolore, reiciendis, iure inventore. Eum, ipsum. Accusantium
+                libero unde, nostrum voluptate earum vero necessitatibus ducimus
+                dicta excepturi eaque distinctio assumenda, debitis vitae ut,
+                impedit id incidunt? Doloribus sequi iste, alias qui fugit
+                molestias?
+              </p>
+              <div class="button">try it now</div>
+              <div class="button button--type-text">learn more</div>
+            </div>
+          </div>
+          <div class="main__media">
+            <img src="img/landscape.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="hero2" class="section main">
+      <div class="container">
+        <div class="wrapper">
+          <div class="main__text">
+            <div>
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Commodi magnam sunt totam labore nulla architecto ducimus vel
+                dolore, reiciendis, iure inventore. Eum, ipsum. Accusantium
+                libero unde, nostrum voluptate earum vero necessitatibus ducimus
+                dicta excepturi eaque distinctio assumenda, debitis vitae ut,
+                impedit id incidunt? Doloribus sequi iste, alias qui fugit
+                molestias?
+              </p>
+              <div class="main__text__buttonWrapper">
+                <div class="button">try it now</div>
+                <div class="button button--type-text">learn more</div>
+              </div>
+            </div>
+          </div>
+          <div class="main__media">
+            <img src="img/portrait.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
