--- a/wrapUp/stp7/stp7.html
+++ b/wrapUp/stp7/stp7.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/stp7.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="mystyle.css"
+    />
     <title>objective1 - stp7</title>
   </head>
   <body>
